--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
             <h2>Produtos</h2>
             <div id="produtos-lista"></div>
         </section>
+        <section class="navegacao">
+            <a href="catalogo.html">
+                <button class="btn-cliente">Ver Catálogo</button>
+            </a>
+        </section>
     </main>
     <script src="script.js"></script>
 </body>
