--- a/catalogo.html
+++ b/catalogo.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+w<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MS Distribuidora - Catálogo de Produtos</title>
+    <title>Catálogo</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
