--- a/catalogo.html
+++ b/catalogo.html
@@ -11,7 +11,7 @@ w<!DOCTYPE html>
         <div class="logo-container">
             <img src="logo.png" alt="Logotipo da MS Distribuidora" id="logo">
         </div>
-        <h1>Catálogo de Produtos - MS Distribuidora</h1>
+        <h1>Catálogo</h1>
     </header>
     <main>
         <section class="buscar-produto">
