--- a/catalogo.html
+++ b/catalogo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catálogo</title>
+    <title>MS Distribuidora - Catálogo de Produtos</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
         <div class="logo-container">
             <img src="logo.png" alt="Logotipo da MS Distribuidora" id="logo">
         </div>
-        <h1>Catálogo</h1>
+        <h1>Catálogo de Produtos - MS Distribuidora</h1>
     </header>
     <main>
         <section class="buscar-produto">
