--- a/catalogo.html
+++ b/catalogo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MS Distribuidora - Catálogo de Produtos</title>
+    <title>Catálogo de Produtos - MS Distribuidora</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,14 +14,14 @@
         <h1>Catálogo de Produtos - MS Distribuidora</h1>
     </header>
     <main>
-        <section class="buscar-produto">
-            <h2>Buscar Produto</h2>
-            <input type="text" id="buscar-nome" placeholder="Digite o nome do produto">
-            <button id="btn-buscar">Buscar</button>
-        </section>
-        <section class="catalogo">
+        <section class="produtos">
             <h2>Produtos Disponíveis</h2>
             <div id="produtos-lista"></div>
+        </section>
+        <section class="navegacao">
+            <a href="index.html">
+                <button class="btn-cliente">Adicionar Produto</button>
+            </a>
         </section>
     </main>
     <script src="catalogo.js"></script>
