--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catálogo MS Distribuidora</title>
+    <title>Catálogo MS Distribuidora - Admin</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
         <div class="logo-container">
             <img src="logo.png" alt="Logotipo da MS Distribuidora" id="logo">
         </div>
-        <h1>Catálogo de Produtos - MS Distribuidora</h1>
+        <h1>Adicionar Produto ao Catálogo</h1>
     </header>
     <main>
         <section class="adicionar-produto">
@@ -38,6 +38,6 @@
             </a>
         </section>
     </main>
-    <script src="script.js"></script>
+    <script src="catalogo.js"></script>
 </body>
 </html>
