--- a/catalogo.html
+++ b/catalogo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catálogo de Produtos - MS Distribuidora</title>
+    <title>Catálogo MS Distribuidora</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,17 +11,12 @@
         <div class="logo-container">
             <img src="logo.png" alt="Logotipo da MS Distribuidora" id="logo">
         </div>
-        <h1>Catálogo de Produtos - MS Distribuidora</h1>
+        <h1>Catálogo de Produtos</h1>
     </header>
     <main>
-        <section class="produtos">
-            <h2>Produtos Disponíveis</h2>
+        <section class="catalogo">
+            <h2>Produtos</h2>
             <div id="produtos-lista"></div>
-        </section>
-        <section class="navegacao">
-            <a href="index.html">
-                <button class="btn-cliente">Adicionar Produto</button>
-            </a>
         </section>
     </main>
     <script src="catalogo.js"></script>
