--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catálogo MS Distribuidora - Admin</title>
+    <title>Catálogo MS Distribuidora</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="logo-container">
+        <div class="header-container">
             <img src="logo.png" alt="Logotipo da MS Distribuidora" id="logo">
+            <h1>MS Distribuidora</h1>
         </div>
-        <h1>Adicionar Produto ao Catálogo</h1>
     </header>
     <main>
         <section class="adicionar-produto">
@@ -32,12 +32,10 @@
             <h2>Produtos</h2>
             <div id="produtos-lista"></div>
         </section>
-        <section class="navegacao">
-            <a href="catalogo.html">
-                <button class="btn-cliente">Ver Catálogo</button>
-            </a>
-        </section>
     </main>
+    <footer>
+        <p>© 2024 MS Distribuidora. Todos os direitos reservados.</p>
+    </footer>
     <script src="catalogo.js"></script>
 </body>
 </html>
