--- a/catalogo.html
+++ b/catalogo.html
@@ -3,22 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catálogo MS Distribuidora</title>
+    <title>Catálogo de Produtos</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="logo-container">
+        <div class="header-container">
             <img src="logo.png" alt="Logotipo da MS Distribuidora" id="logo">
+            <h1>Catálogo MS Distribuidora</h1>
         </div>
-        <h1>Catálogo de Produtos</h1>
     </header>
     <main>
         <section class="catalogo">
-            <h2>Produtos</h2>
+            <h2>Produtos Disponíveis</h2>
             <div id="produtos-lista"></div>
         </section>
     </main>
+    <footer>
+        <p>© 2024 MS Distribuidora. Todos os direitos reservados.</p>
+    </footer>
     <script src="catalogo.js"></script>
 </body>
 </html>
