--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catálogo MS Distribuidora</title>
+    <title>MS Distribuidora</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,23 +13,15 @@
         </div>
     </header>
     <main>
-        <section class="adicionar-produto">
-            <h2>Adicionar Produto</h2>
-            <form id="form-produto" enctype="multipart/form-data">
-                <input type="text" id="nome" placeholder="Nome do Produto" required>
-                <input type="number" id="preco" placeholder="Preço (R$)" step="0.01" required>
-                <input type="file" id="imagem" accept="image/*" required>
-                <button type="submit">Adicionar</button>
-            </form>
-        </section>
-        <section class="buscar-produto">
-            <h2>Buscar Produto</h2>
-            <input type="text" id="buscar-nome" placeholder="Nome do Produto">
-            <button id="btn-buscar">Buscar</button>
-        </section>
-        <section class="catalogo">
-            <h2>Produtos</h2>
-            <div id="produtos-lista"></div>
+        <section class="intro">
+            <h1>Bem-vindo à MS Distribuidora!</h1>
+            <p>Descubra uma variedade de produtos de alta qualidade.</p>
+            <!-- Botão para acessar o catálogo como cliente -->
+            <div class="navegacao">
+                <a href="catalogo.html">
+                    <button class="btn-cliente">Ver Catálogo</button>
+                </a>
+            </div>
         </section>
     </main>
     <footer>
